[tool.poetry]
name = "buraki"
version = "0.1.0a0"
description = "Blog for publishing achievements in IT, business and sports"
license = "MIT"
authors = ["Rasim Eminov <eminov.workspace@yandex.ru>"]
readme = "README.md"
homepage = "https://buraki.site/"
repository = "https://github.com/l3uraki/buraki/"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
